# aoc2025

./: .gitignore  README.md  check  check.sh  main.py  pyproject.toml
solutions/: day01.py
src/: utils.py
src/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  template.py
