[project]
name = "aoc2025"
version = "0.1.0"
description = "Solutions for Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = true
